--- a/public/login.html
+++ b/public/login.html
@@ -139,7 +139,7 @@
     const senha = document.getElementById('senha-cliente').value;
 
     // Buscar usuário cadastrado
-    const usuarioCadastrado = JSON.parse(localStorage.getItem('barberpro_user'));
+    const usuarioCadastrado = JSON.parse(localStorage.getItem('cliente'));
     
 if (
     usuarioCadastrado &&
