--- a/public/cliente-meus-agendamentos.html
+++ b/public/cliente-meus-agendamentos.html
@@ -8,12 +8,12 @@
 <body>
     <header class="app-header">
         <div class="container">
-            <nav class="navbar"></nav>
-                <a href="cliente-dashboard.html" class="back-link">← Voltar ao Dashboard</a>
-                <span class="app-title">App de Agendamentos</span>
-                <div class="user-menu">
-                    <a href="cliente-perfil.html" class="user-link">Meu Perfil</a>
-                </div>
+            <nav class="navbar">
+    <a href="cliente-dashboard.html" class="back-link">← Voltar ao Dashboard</a>
+    <span class="app-title">App de Agendamentos</span>
+    <div class="user-menu">
+        <a href="cliente-perfil.html" class="user-link">Meu Perfil</a>
+    </div>
             </nav>
             <h1 class="page-title">Meus Agendamentos</h1>
         </div>
