--- a/public/cadastro-cliente.html
+++ b/public/cadastro-cliente.html
@@ -30,8 +30,7 @@
                     </div>
                     <div class="mb-4">
                         <label for="cep" class="block text-sm font-medium text-gray-700 mb-1">CEP*</label>
-                        <input type="text" id="cep" maxlength="9" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 mb-2">
-
+                        <input type="text" id="cep" maxlength="9" required class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <div class="flex space-x-2 mb-2">
                             <div class="flex-1">
                                 <label for="numero" class="block text-sm font-medium text-gray-700 mb-1">Número*</label>
@@ -92,96 +91,86 @@
             </form>
         </div>
     </div>
-<script>
-const etapa1 = document.getElementById('etapa-1');
-const etapa2 = document.getElementById('etapa-2');
-const btnEtapa1 = document.getElementById('btn-etapa-1');
-const btnVoltar1 = document.getElementById('btn-voltar-1');
-const atendBarbearia = document.getElementById('atend-barbearia');
-const atendDomicilio = document.getElementById('atend-domicilio');
-const cepInput = document.getElementById('cep');
-const ruaInput = document.getElementById('rua');
-const bairroInput = document.getElementById('bairro');
-const cidadeInput = document.getElementById('cidade');
-const estadoInput = document.getElementById('estado');
-const senhaInput = document.getElementById('senha');
+    <script>
+    // Defina todas as variáveis de elementos no topo do script
+    const etapa1 = document.getElementById('etapa-1');
+    const etapa2 = document.getElementById('etapa-2');
+    const btnEtapa1 = document.getElementById('btn-etapa-1');
+    const btnVoltar1 = document.getElementById('btn-voltar-1');
+    const atendBarbearia = document.getElementById('atend-barbearia');
+    const atendDomicilio = document.getElementById('atend-domicilio');
+    const cepInput = document.getElementById('cep');
+    const ruaInput = document.getElementById('rua');
+    const bairroInput = document.getElementById('bairro');
+    const cidadeInput = document.getElementById('cidade');
+    const estadoInput = document.getElementById('estado');
+    const senhaInput = document.getElementById('senha');
 
-// Navegação entre etapas
-btnEtapa1.addEventListener('click', () => {
-  etapa1.classList.add('hidden');
-  etapa2.classList.remove('hidden');
-});
+    // Navegação entre etapas
+    btnEtapa1.addEventListener('click', function() {
+        etapa1.classList.add('hidden');
+        etapa2.classList.remove('hidden');
+    });
 
-btnVoltar1.addEventListener('click', () => {
-  etapa2.classList.add('hidden');
-  etapa1.classList.remove('hidden');
-});
+    btnVoltar1.addEventListener('click', function() {
+        etapa2.classList.add('hidden');
+        etapa1.classList.remove('hidden');
+    });
 
-// CEP automático
-cepInput.addEventListener('blur', () => {
-  const cep = cepInput.value.replace(/\D/g, '');
-  if (cep.length === 8) {
-    fetch(`https://viacep.com.br/ws/${cep}/json/`)
-      .then(res => res.json())
-      .then(data => {
-        if (!data.erro) {
-          ruaInput.value = data.logradouro || '';
-          bairroInput.value = data.bairro || '';
-          cidadeInput.value = data.localidade || '';
-          estadoInput.value = data.uf || '';
+    // CEP automático (exemplo simples, pode ser integrado com API ViaCEP)
+    cepInput.addEventListener('blur', function() {
+        const cep = cepInput.value.replace(/\D/g, '');
+        if (cep.length === 8) {
+            fetch(`https://viacep.com.br/ws/${cep}/json/`)
+                .then(response => response.json())
+                .then(data => {
+                    if (!data.erro) {
+                        ruaInput.value = data.logradouro || '';
+                        bairroInput.value = data.bairro || '';
+                        cidadeInput.value = data.localidade || '';
+                        estadoInput.value = data.uf || '';
+                    }
+                });
         }
-      });
-  }
-});
+    });
 
-// Cadastro
-document.getElementById('cadastro-cliente-form').addEventListener('submit', function(e) {
-  e.preventDefault();
+    // Cadastro
+    document.getElementById('cadastro-cliente-form').addEventListener('submit', function(e) {
+        e.preventDefault();
 
-  const usuario = {
-    nome: document.getElementById('nome').value,
-    email: document.getElementById('email').value,
-    senha: senhaInput.value,
-    tipo: 'cliente', // <- Obrigatório para o backend
-    cep: cepInput.value,
-    rua: ruaInput.value,
-    bairro: bairroInput.value,
-    cidade: cidadeInput.value,
-    estado: estadoInput.value,
-    atendimento: atendBarbearia.checked ? 'barbearia' : 'domicilio'
-  };
+        const usuario = {
+            nome: document.getElementById('nome').value,
+            email: document.getElementById('email').value,
+            senha: senhaInput.value,
+            tipo: 'cliente',
+            cep: cepInput.value,
+            rua: ruaInput.value,
+            bairro: bairroInput.value,
+            cidade: cidadeInput.value,
+            estado: estadoInput.value,
+            atendimento: atendBarbearia.checked ? 'barbearia' : 'domicilio'
+        };
 
-  fetch('/api/cadastro', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json'
-    },
-    body: JSON.stringify(usuario)
-  })
-  .then(async response => {
-    if (!response.ok) {
-      const erro = await response.json();
-      throw new Error(erro.message || 'Erro ao cadastrar no banco de dados');
-    }
-    return response.json();
-  })
-  .then(() => {
-    // Armazena no localStorage (opcional)
-    let usuarios = [];
-    try {
-      const dados = JSON.parse(localStorage.getItem('barberpro_user'));
-      if (Array.isArray(dados)) usuarios = dados;
-    } catch {}
-    usuarios.push(usuario);
-    localStorage.setItem('barberpro_user', JSON.stringify(usuarios));
-
-    alert('Cadastro realizado com sucesso!');
-    window.location.href = 'cliente-dashboard.html';
-  })
-  .catch(error => {
-    alert('Erro ao cadastrar: ' + error.message);
-  });
-});
-</script>
+        // Envia os dados para o backend (Node.js/Express) que salva no MongoDB
+        fetch('/api/clientes', {
+            method: 'POST',
+            headers: {
+            'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(usuario)
+        })
+        .then(response => {
+            if (!response.ok) throw new Error('Erro ao cadastrar no banco de dados');
+            return response.json();
+        })
+        .then(data => {
+            alert('Cadastro realizado com sucesso!');
+            window.location.href = 'login.html';
+        })
+        .catch(error => {
+            alert('Erro ao cadastrar: ' + error.message);
+        });
+    });
+    </script>
 </body>
 </html>
