--- a/public/cliente-meus-agendamentos.html
+++ b/public/cliente-meus-agendamentos.html
@@ -2,27 +2,47 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Meus Favoritos - Cliente</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BarberPro - Meus Agendamentos</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-    <header class="app-header">
-        <div class="container">
-            <nav class="navbar">
-    <a href="cliente-dashboard.html" class="back-link">← Voltar ao Dashboard</a>
-    <span class="app-title">App de Agendamentos</span>
-    <div class="user-menu">
-        <a href="cliente-perfil.html" class="user-link">Meu Perfil</a>
-    </div>
-            </nav>
-            <h1 class="page-title">Meus Agendamentos</h1>
+<body class="bg-gray-100 min-h-screen">
+    <div class="container mx-auto px-4 py-8">
+        <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg overflow-hidden">
+            <div class="p-6">
+                <div class="flex justify-between items-center mb-6">
+                    <h1 class="text-3xl font-bold text-gray-800">Meus Agendamentos</h1>
+                    <a href="cliente-dashboard.html" class="text-blue-600 hover:underline">
+                        <i class="fas fa-arrow-left mr-2"></i>Voltar ao Dashboard
+                    </a>
+                </div>
+
+                <div id="agendamentos-lista" class="space-y-4">
+                    <!-- Exemplo de agendamento -->
+                    <div class="bg-gray-50 p-4 rounded-md border flex justify-between items-center">
+                        <div>
+                            <p class="font-bold">Corte Masculino</p>
+                            <p class="text-sm text-gray-600">com <span class="font-semibold">Barbeiro Exemplo</span></p>
+                            <p class="text-sm text-gray-600">
+                                <i class="fas fa-calendar-alt mr-2"></i>10 de Julho de 2025, às 14:30
+                            </p>
+                        </div>
+                        <div>
+                            <button class="text-red-500 hover:text-red-700">
+                                <i class="fas fa-times-circle mr-2"></i>Cancelar
+                            </button>
+                        </div>
+                    </div>
+                     <!-- Fim do exemplo -->
+
+                    <div class="text-center py-8">
+                        <p>Você ainda não possui agendamentos.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </header>
-    <main>
-        <section id="agendamentos-lista">
-            <p>Você ainda não possui agendamentos.</p>
-            <!-- Aqui serão listados os agendamentos do cliente -->
-        </section>
-    </main>
+    </div>
 </body>
 </html>
