--- a/public/esqueci-senha.html
+++ b/public/esqueci-senha.html
@@ -5,29 +5,41 @@
   <title>Esqueci minha senha</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- ...existing code... -->
+  <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
-  <h2>Redefinir Senha</h2>
-  <form id="reset-password-form">
-    <label for="tipo-usuario">Tipo de usuário:</label>
-    <select id="tipo-usuario" name="tipo-usuario" required>
-      <option value="">Selecione</option>
-      <option value="cliente">Cliente</option>
-      <option value="barbeiro">Barbeiro</option>
-    </select>
-    <br><br>
-    <label for="email">E-mail:</label>
-    <input type="email" id="email" name="email" required>
-    <br><br>
-    <label for="nova-senha">Nova senha:</label>
-    <input type="password" id="nova-senha" name="nova-senha" required>
-    <br><br>
-    <label for="confirmar-senha">Confirmar nova senha:</label>
-    <input type="password" id="confirmar-senha" name="confirmar-senha" required>
-    <br><br>
-    <button type="submit">Redefinir Senha</button>
-  </form>
-  <div id="mensagem"></div>
+  <div class="container">
+    <div class="card card-form">
+      <h2 class="card-title">Redefinir Senha</h2>
+      <form id="reset-password-form" class="form">
+        <div class="form-group">
+          <label for="tipo-usuario">Tipo de usuário:</label>
+          <select id="tipo-usuario" name="tipo-usuario" class="input" required>
+            <option value="">Selecione</option>
+            <option value="cliente">Cliente</option>
+            <option value="barbeiro">Barbeiro</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="email">E-mail:</label>
+          <input type="email" id="email" name="email" class="input" required>
+        </div>
+        <div class="form-group">
+          <label for="nova-senha">Nova senha:</label>
+          <input type="password" id="nova-senha" name="nova-senha" class="input" required>
+        </div>
+        <div class="form-group">
+          <label for="confirmar-senha">Confirmar nova senha:</label>
+          <input type="password" id="confirmar-senha" name="confirmar-senha" class="input" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-block">Redefinir Senha</button>
+      </form>
+      <div id="mensagem" class="mensagem" aria-live="polite"></div>
+      <div class="form-footer">
+        <a href="/login.html" class="link">Voltar ao login</a>
+      </div>
+    </div>
+  </div>
   <script>
     // Exemplo simples de validação de senha
     document.getElementById('reset-password-form').addEventListener('submit', async function(e) {
@@ -37,6 +49,22 @@
       const senha = document.getElementById('nova-senha').value;
       const confirmar = document.getElementById('confirmar-senha').value;
       const mensagem = document.getElementById('mensagem');
+      mensagem.textContent = ''; // Limpa mensagem anterior
+
+      // Validação de campos obrigatórios
+      if (!tipoUsuario || !email || !senha || !confirmar) {
+        mensagem.textContent = 'Preencha todos os campos.';
+        mensagem.style.color = 'red';
+        return;
+      }
+
+      // Validação de senha mínima
+      if (senha.length < 6) {
+        mensagem.textContent = 'A senha deve ter pelo menos 6 caracteres.';
+        mensagem.style.color = 'red';
+        return;
+      }
+
       if (senha !== confirmar) {
         mensagem.textContent = 'As senhas não coincidem.';
         mensagem.style.color = 'red';
@@ -57,7 +85,9 @@
           mensagem.textContent = resultado.mensagem || 'Senha redefinida com sucesso!';
           mensagem.style.color = 'green';
         } else {
-          mensagem.textContent = resultado.erro || 'Erro ao redefinir senha.';
+          mensagem.textContent = resultado.erro 
+            ? `Erro ao redefinir senha: ${resultado.erro}` 
+            : 'Erro ao redefinir senha. Por favor, verifique os dados informados e tente novamente.';
           mensagem.style.color = 'red';
         }
       } catch (err) {
